Fixed h1 letter spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -84,6 +84,7 @@ img {
   font-weight: 600;
   line-height: 1em;
   text-transform: uppercase;
+  letter-spacing: 0.5ch;
 
   color: var(--neutral-dark-grayish-red);
 }
